--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/index.js",
-    "start:name": "node ./src/index.js -- --username=Vladislav"
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
